--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "ionic-toast",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "A toast for IONIC framework",
   "main": "./dist/ionic-toast.bundle.min.js",
   "scripts": {},
-  "author": "https://github.com/rajeshwarpatlolla, rajeshwar.patlolla@gmail.com",
+  "author": "https://github.com/creativeone86, iordan340@gmail.com",
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
+    "clone": "^2.1.0",
     "del": "^2.2.0",
+    "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-css2js": "^1.0.2",
     "gulp-uglify": "^1.5.3"
